# IpcBozo

./: CMakeLists.txt  README.md  client.cpp  server_1.cpp  server_1_api.h  server_2.cpp  server_2_api.h
IpcBozo/: bozo.cpp  bozo.h
